feat(clinic): add patient administrative detail
